--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -2,8 +2,9 @@
 :root {
     --background-color: #ffffff;
     --text-color: #2d2d2d;
-    --primary-color: #005f99;
-    --secondary-color: #e3f2fd;
+    --primary-color: #0fa4af;
+    --secondary-color: #afdde5;
+    --hover-color: #ffffff;
     --error-color: #ff5252;
     --error-background: #fff5f5;
     --success-color: #00796b;
@@ -18,6 +19,7 @@
     --text-color: #e0e0e0;
     --primary-color: #82b1ff;
     --secondary-color: #1e3a5f;
+    --hover-color: #0fa4af;
     --error-color: #ff867c;
     --error-background: #3b0000;
     --success-color: #80cbc4;
@@ -44,9 +46,9 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    color: #004466;
-    text-decoration: underline;
+a:hover, a:focus {
+    color: var(--hover-color);
+    background-color: var(--primary-color);
 }
 
 /* Error message */
