fix(a11y): Correct roles in social links and improve menu accessibility

--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -26,7 +26,7 @@
     --success-background: #002b24;
 }
 
-[data-animations="off"] {
+[data-reduced-motion="true"] {
     --animation-duration: 0s;
     --animation-state: paused;
 }
