--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -3,7 +3,7 @@
     --background-color: #ffffff;
     --text-color: #2d2d2d;
     --primary-color: #0fa4af;
-    --secondary-color: #afdde5;
+    --secondary-color:#ffffff;
     --hover-color: #ffffff;
     --error-color: #ff5252;
     --error-background: #fff5f5;
@@ -15,9 +15,9 @@
 
 /* Dark mode colours  */
 [data-theme="dark"] {
-    --background-color: #121212;
+    --background-color: #1F2833;
     --text-color: #e0e0e0;
-    --primary-color: #82b1ff;
+    --primary-color: #66FCF1;
     --secondary-color: #1e3a5f;
     --hover-color: #0fa4af;
     --error-color: #ff867c;
