--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -1,6 +1,7 @@
 /* Default colours */
 :root {
     --background-color: #ffffff;
+    --background-form-color:#2BCDD9;
     --text-color: #2d2d2d;
     --primary-color: #0fa4af;
     --secondary-color:#ffffff;
@@ -16,6 +17,7 @@
 /* Dark mode colours  */
 [data-theme="dark"] {
     --background-color: #1F2833;
+    --background-form-color: #66fcf1;
     --text-color: #e0e0e0;
     --primary-color: #66FCF1;
     --secondary-color: #1e3a5f;
