--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -2,6 +2,7 @@
 :root {
     --background-color: #ffffff;
     --background-form-color:#2BCDD9;
+    --language-selector-text-color: #2d2d2d;
     --text-color: #2d2d2d;
     --primary-color: #0fa4af;
     --secondary-color:#ffffff;
@@ -18,6 +19,7 @@
 [data-theme="dark"] {
     --background-color: #1F2833;
     --background-form-color: #66fcf1;
+    --language-selector-text-color: #ffffff;
     --text-color: #e0e0e0;
     --primary-color: #66FCF1;
     --secondary-color: #1e3a5f;
