--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -4,6 +4,7 @@
     --background-form-color:#2BCDD9;
     --background-form-header-color: #ffffff;
     --language-selector-text-color: #000000;
+    --snackbar-color: #1e3a5f;
     --text-color: #2d2d2d;
     --primary-color: #ffffff;
     --secondary-color:#ffffff;
@@ -22,7 +23,8 @@
     --background-form-color: #66fcf1;
     --background-form-header-color: #66fcf1;
     --language-selector-text-color: #000000;
-    --text-color: #e0e0e0;
+    --snackbar-color: #2fae83;
+    --text-color:rgb(4, 3, 3);
     --primary-color: #66FCF1;
     --secondary-color: #1e3a5f;
     --hover-color: #0fa4af;
