--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -17,7 +17,7 @@
     --animation-state: running;
 }
 
-/* Dark mode colours  */
+/* Dark mode colours  #FF6B6B #F4A261 */
 [data-theme="dark"] {
     --background-color: #1F2833;
     --background-form-color: #66fcf1;
@@ -26,7 +26,7 @@
     --snackbar-color: #2fae83;
     --text-color:rgb(4, 3, 3);
     --primary-color: #66FCF1;
-    --secondary-color: #1e3a5f;
+    --secondary-color: #FF6B6B; 
     --hover-color: #0fa4af;
     --error-color: #ff867c;
     --error-background: #3b0000;
